syntax = "proto3";

package compass;

message Student {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

message GetStudentsRequest {
}

message GetStudentsResponse {
  repeated Student student = 1;
}

service Compass {
  rpc GetStudents(GetStudentsRequest) returns (GetStudentsResponse) {};
}